Add repository interfaces for core entities
- Created IAddressRepository for managing user addresses.
- Created ICartItemRepository for handling cart items associated with users.
- Created ICategoryRepository for retrieving categories and subcategories.
- Created IInventoryRepository for managing product inventory and stock levels.
- Created IOrderItemRepository for accessing order items by order ID.
- Created IOrderRepository for managing orders, including user-specific queries.
- Created IProductRepository for product-related queries, including filtering and pagination.
- Created IReviewRepository for managing product reviews and ratings.
- Created IUserRepository for user management, including authentication and user type queries.